# dumb-app

./: .gitignore  CMakeLists.txt
Client/: CmakeLists.txt
Networking/: CMakeLists.txt
Networking/include/Networking/: base.hpp
Networking/src/: base.cpp
Server/: CMakeLists.txt  server.cpp
build-files/Client/: AppClient
build-files/Server/: AppServer
build-files/src/Client/: AppClient
src/Client/: CmakeLists.txt  client.cpp
src/Networking/: CMakeLists.txt
src/Networking/include/Networking/: base.hpp
src/Networking/src/: base.cpp
src/Server/: CMakeLists.txt  server.cpp
